--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,12 @@
 	<groupId>com.my_notebook</groupId>
 	<artifactId>server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>server</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<start-class>com.mynotebook.server.ServerApplication</start-class>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -60,6 +62,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<mainClass>com.mynotebook.server.ServerApplication</mainClass>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
