--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,6 @@ server.port=9080
 
 spring.datasource.url=jdbc:mysql://localhost:3306/user_manager
 spring.datasource.username=root
-spring.datasource.password=Iopjkl135@
+spring.datasource.password=Iopjkl135
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
