--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=server
 server.port=9080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/user_manager
-spring.datasource.username=root
-spring.datasource.password=Iopjkl135
+spring.datasource.url=jdbc:mysql://178.208.76.215:3306/my_notebook
+spring.datasource.username=admin
+spring.datasource.password=Iopjkl135@
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 
